--- a/citations.html
+++ b/citations.html
@@ -61,8 +61,8 @@
     <p class="text">
         All Images are found on unsplash.com, their polciy states that all photos can be downloaded and used for free<br>
         All Logo and Airspace related pictures are create by Ourselves (Ameya Chaudhari and Alvin James) on Adobe<br>
-        Plan of work log:
-        Copyright:
+        Plan of work log and Copy Right Forms: <br>
+         <a href="form.pdf">
     </p>
 </body>
 
