--- a/PromotionandPricing.html
+++ b/PromotionandPricing.html
@@ -28,13 +28,13 @@
           />
         </a>
       </div>
-      <ul class="nav-links">
+     <ul class="nav-links">
         <li>
           <a href="index.html">Home</a>
         </li>
 
-        <li class="dropdown">
-          <a href="PromotionandPricing.html">Promotions & Pricing</a>
+        <li>
+          <a href="PromotionandPricing.html">Promos & Pricing</a>
         </li>
         <li><a href="moontrip.html">Moon Trip</a></li>
             <li><a href="marstrip.html">Mars Trip</a></li>
