--- a/citations.html
+++ b/citations.html
@@ -33,8 +33,8 @@
           <a href="index.html">Home</a>
         </li>
 
-        <li class="dropdown">
-          <a href="PromotionandPricing.html">Promotions & Pricing</a>
+        <li>
+          <a href="PromotionandPricing.html">Promos & Pricing</a>
         </li>
         <li><a href="moontrip.html">Moon Trip</a></li>
             <li><a href="marstrip.html">Mars Trip</a></li>
