--- a/moontrip.html
+++ b/moontrip.html
@@ -28,23 +28,23 @@
         />
       </a>
     </div>
-    <ul class="nav-links">
-      <li>
-        <a href="index.html">Home</a>
-      </li>
+  <ul class="nav-links">
+        <li>
+          <a href="index.html">Home</a>
+        </li>
 
-      <li class="dropdown">
-        <a href="PromotionandPricing.html">Promotions & Pricing</a>
-      </li>
-      <li><a href="moontrip.html">Moon Trip</a></li>
-          <li><a href="marstrip.html">Mars Trip</a></li>
-      <li>
-        <a href="TrainingandSafety.html">Training & Saftey</a>
-      </li>
-      <li>
-        <a href="citations.html">Citations</a>
-      </li>
-    </ul>
+        <li>
+          <a href="PromotionandPricing.html">Promos & Pricing</a>
+        </li>
+        <li><a href="moontrip.html">Moon Trip</a></li>
+            <li><a href="marstrip.html">Mars Trip</a></li>
+        <li>
+          <a href="TrainingandSafety.html">Training & Saftey</a>
+        </li>
+        <li>
+          <a href="citations.html">Citations</a>
+        </li>
+      </ul>
     <div class="burger">
       <div class="line1"></div>
       <div class="line2"></div>
